bynkc/tests/fixtures/negative/152_fn_type_in_service_sig/src/hof/api.bynk
context hof.api

service runner {
  on call(f: Int -> Int) -> Effect[Int] {
    Effect.pure(0)
  }
}
